--- a/schedulePage.html
+++ b/schedulePage.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+
+
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
@@ -8,6 +12,9 @@
 		outline: 1px solid #005290;
 	}
 </style>
+</head>
+
+<body>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
@@ -55,5 +62,5 @@
 		initESW('https://service.force.com');
 	}
 </script>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+</body>
 </html>
